--- a/public/about/index.html
+++ b/public/about/index.html
@@ -135,7 +135,7 @@ End of Selection">
 <h1 id="start-of-selection-1">Start of Selection</h1>
 <p>你可以编辑这个文件 (<code>content/about.md</code>) 来添加更多关于你的信息。这里是一些示例内容，你可以在这里介绍你的背景、兴趣和职业经历。分享你喜欢的技术、项目或任何你认为有趣的事情。希望这些信息能帮助读者更好地了解你！你还可以在这里添加图片和链接，以便更生动地展示你的故事。例如，插入一张你的照片或链接到你喜欢的项目。</p>
 <h1 id="end-of-selection">End of Selection</h1>
-<p><img src="/images/a.jpg" alt="示例图片" title="图片A"></p>
+<p><img src="/blog/images/a.jpg" alt="示例图片" title="图片A"></p>
 
       </div>
     </article>
