--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,8 @@
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           <p>这是我的第一篇博客文章！</p>
 <p>欢迎来到我的 Hugo 博客。</p>
-<p>你可以用 Markdown 语法在这里写作。</p>
+<p>你可以用 Markdown 语法在这里写作。
+更新 blog</p>
         </div>
         <a href="/blog/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1"></a>
       </div>
